--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Find your Coach, Find your Match!"
     />
+    <meta name="author" content="YottaDev" />
+    <meta name="keywords" content="coachync, coach, life coach, online life coach, online coach, online tutor, coaching, coaching agency, best life coach, worldwide coaches, life coaches"
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Coachync</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
