Home Page Responsiveness till 600px--version 12.30.50

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Find your Coach, Find your Match!"
-    />
+    <meta name="description" content="Find your Coach, Find your Match!" />
     <meta name="author" content="YottaDev" />
-    <meta name="keywords" content="coachync, coach, life coach, online life coach, online coach, online tutor, coaching, coaching agency, best life coach, worldwide coaches, life coaches"
+    <meta
+      name="keywords"
+      content="coachync, coach, life coach, online life coach, online coach, online tutor, coaching, coaching agency, best life coach, worldwide coaches, life coaches"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
